[package]
name = "cyconetics-bci-policy"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Policy layer for Cyconetics BCI: XR-grid and jurisdictional constraints."
repository = "https://github.com/Doctor0Evil/Cyconetics"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1", features = ["serde", "v4"] }

# Reuse the DCM and error types from core crate.
cyconetics-bci-core = { path = "../cyconetics-bci-core" }
