[package]
name = "organic_cpu_sim"
version = "0.1.0"
edition = "2021"

[dependencies]
organic_cpu_math = { path = "../organic_cpu_math" }
neurorights-core  = { path = "../neurorights-core" }
neurorights-firewall = { path = "../neurorights-firewall" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
